--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     compile ('com.mapbox.mapboxsdk:mapbox-android-services:1.3.1@aar'){
         transitive=true
     }
-    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'com.squareup.retrofit2:retrofit:dua.dua.0'
     compile 'com.squareup.retrofit2:converter-gson'
     compile 'com.cocoahero.android:geojson:1.0.1@jar'
     testCompile 'junit:junit:4.12'
